--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,17 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.1
+  flutter_bloc: ^8.1.3
+  
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/images/start_ball.png
+    - assets/images/start_elipse.png
+  
+  fonts:
+    - family: Grillsans
+      fonts:
+        - asset: assets/fonts/gillsansmt.ttf
