--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  dio: ^5.3.0
 
 dev_dependencies:
   flutter_test:
@@ -21,14 +22,20 @@ dev_dependencies:
 
   flutter_lints: ^2.0.1
   flutter_bloc: ^8.1.3
-  
+
 flutter:
 
   uses-material-design: true
 
   assets:
-    - assets/images/start_ball.png
+    - assets/images/error_ball.png
+    - assets/images/error_elipse.png
+    - assets/images/main_ball.png
     - assets/images/start_elipse.png
+    - assets/images/start_ball.png
+   
+    
+    
   
   fonts:
     - family: Grillsans
